external-dns/example/myapp-2-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/hostname: myapp-2.myzonedomain-1.example.com
    external-dns.alpha.kubernetes.io/target: router-default.apps.myclusterdomain.example.com
    external-dns.alpha.kubernetes.io/ttl: 300s
  labels:
    external-dns.mydomain.org/publish: "yes"
  name: myapp-2
  namespace: external-dns-custom
spec:
  port:
    targetPort: http-80
  to:
    kind: Service
    name: myapp-2
